[package]
name = "smart-contract-wasm"
version = "0.0.1"
authors = [ "nuwa <nuwa@yannis.codes>" ]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib" ]

[workspace]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies]
smart-contract = { path = ".." }
elrond-wasm-output = { version = "0.27.4", features = [ "wasm-output-mode" ] }
elrond-wasm-node = "0.27.4"
